# doubled-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rustfmt.yml
src/: f32.rs  f32x.rs  f64.rs  f64x.rs  lib.rs
