[package]
name = "doubled"
version = "0.2.0"
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]
description = "Dekker arithmetic"
readme = "README.md"
repository = "https://github.com/burrbull/doubled-rs"
license = "MIT/Apache-2.0"
edition = "2021"

[dependencies.packed_simd]
package = "packed_simd_2"
version = "0.3.8"
features = ["into_bits"]
optional = true

[features]
default = []
