[package]
name = "doubled"
version = "0.3.2"
authors = ["Andrey Zgarbul <zgarbul.andrey@gmail.com>"]
description = "Dekker arithmetic"
keywords = ["math", "simd"]
readme = "README.md"
repository = "https://github.com/burrbull/doubled-rs"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
default = ["simd"]
simd = []
enable_recsqrt_sp = []
